Fix contact message spacing. Adjust contact button location.

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@ TYPOGRAPHY
 FONT SIZE SYSTEM (px)
   10/ 12/ 14/ 16/ 18/ 20/ 24/ 30/ 36/ 44/ 52/ 62/ 74/ 86/ 98
 
+Larger Fonts
+large headings: 16rem (160px)
+
 COLORS
   pure-white: #ffffff
   lighter-black: #646357
@@ -21,6 +24,15 @@ COLORS
       
 SPACING SYSTEM (px)
   2/ 4/ 8/ 12/ 16/ 24/ 32/ 48/ 64/ 80/ 96/ 128
+
+  Larger Spaces
+max-width (hero, project container): 130rem (1300px)
+vertical margins (projects: 19.2rem
+vertical padding (projects): 12.8rem
+image heights (project thumbnails): 30rem
+form container max-width: 60rem
+
+
 
 */
 
@@ -84,7 +96,6 @@ body {
   border-radius: 10px;
   padding: 1.6rem 3.2rem;
   box-sizing: border-box;
-  height: 20px;
   color: #242421;
   transition: all 0.3s;
 }
@@ -140,7 +151,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
-  gap: 9.6;
+  gap: 9.6rem;
   /* grid-template-columns: 1fr 35%; */
 }
 
@@ -320,9 +331,9 @@ body {
 .contact-background-three {
 }
 
-.contact-container {
+.contact-form-container {
   max-width: 60rem;
-  margin: 0 auto;
+  margin: 9.6rem auto;
 }
 
 .contact-title {
@@ -332,36 +343,34 @@ body {
 
 .contact-form {
   display: grid;
-  gap: 2.4rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 2.4rem;
 }
 
 .contact-input-container {
   display: grid;
-  grid-template-rows: 1fr 1fr;
-  gap: 0.5rem;
+  gap: 0.8rem;
 }
 
 /* .contact-label {
-  font-weight: 500;
+  margin-bottom: 0.4rem;
 } */
 
 .contact-input {
   background-color: #d5f3ff;
   border: solid 1px #242421;
   font-family: inherit;
+  padding: 0.8rem;
 }
 
 .contact-message {
   display: block;
-
   width: 100%;
-  font-size: 1.6rem;
-  line-height: 1.4;
 }
 
 .contact-button {
-  border: none;
-  display: inline;
+  align-self: flex-end;
 }
 
 /* .montserrat-<uniquifier > {
